# MetroGS

./: .gitignore  .gitmodules  LICENSE  README.md  colmap.sh  dataset.py  eval_f1.sh  extract.sh  main_bsz.py  main_bsz_offload.py  pyproject.toml  requirements.txt  resize.sh  traj.sh
blender/: README.md  render_run.py
configs/: .gitignore
configs/metrogs/: CUHK_UPPER.yaml  CUHK_UPPER_TEST.yaml  LFLS.yaml  LFLS_TEST.yaml  MatrixCity-Aerial.yaml  MatrixCity-Aerial_TEST.yaml  MatrixCity-Street.yaml  MatrixCity-Street_TEST.yaml  SMBU.yaml  SMBU_TEST.yaml  building.yaml  (+7 more)
doc/: data_preparation.md  installation.md  run&eval.md
internal/: callbacks.py  cli.py  dataset_bsz.py  gaussian_splatting.py  gaussian_splatting_bsz.py  gaussian_splatting_bsz_offload.py  mp_strategy.py  mp_strategy_offload.py  optimizers_offload.py  schedulers.py
pointmap/: run_para.sh  scene_images_segment.py
scripts/: data_proc_mc.sh  data_proc_mill19.sh  data_proc_us3d.sh  metrogs_example.sh  run_metrogs_building.sh  run_metrogs_lfls.sh  run_metrogs_mc_aerial.sh  run_metrogs_mc_street.sh  run_metrogs_residence.sh  run_metrogs_rubble.sh  run_metrogs_sciart.sh  run_metrogs_smbu.sh  run_metrogs_upper.sh
tools/: get_monodepth_points.py  render_traj.py
utils/: estimate_dataset_mask_depths.py  get_depth_scales.py  get_mask_depth_scales.py  get_test_appearance.py  image_downsample.py  merge_distributed_ckpts.py  monodepth_filter.py  monodepth_filterv2.py  multi_view_filter.py  partition_citygs.py  ray.py  run_depth_anything_v2.py  run_moge_v2.py  scene_images_segment.py  system_utils.py
(+111 files in other folders)
